tests/sksl/errors/OpenArray.dsl.glsl
### Compilation failed:

error: expected expression, but found '='
error: shader 'main' must be main() or main(float2)

2 errors
